2006-01-27  Ryan Lortie  <desrt@desrt.ca>

	* drivemount.c (change_background, applet_factory): Move to the new
	  libpanel-applet API for background handling.

2005-11-26  Ryan Lortie  <desrt@desrt.ca>

	* drivemount.c (display_about_dialog):  Change "translator_credits" to
	  "translator-credits" as per bug #314604.

2005-11-07  Davyd Madeley  <davyd@madeley.id.au>

	* drive-button.c: scale images so that they don't exploderise the
	  panel. Patch from Michael Hofmann <mh21@piware.de>. Closes #319122.

2005-10-01  Ryan Lortie  <desrt@desrt.ca>

	* drive-button.c: Fall back to volume activation URI when drive
	  activation URI is not defined.  Closes bug #315587.

	Vendor patch from Ubuntu by James Henstridge <jamesh@canonical.com>

2005-10-01  Ryan Lortie  <desrt@desrt.ca>

	* drive-list.c: ensure button relief is set on newly-created drives.

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* help/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-09-01  Davyd Madeley  <davyd@madeley.id.au>

	* docs/*: removed
	* help/Makefile.am: moved pa translation to where it should be, added to
	  DOC_LINGUAS.

2005-08-22  Ryan Lortie  <desrt@desrt.ca>

	* drive-button.c (drive_button_ensure_popup): Guard against the case
	  that self->drive might be NULL.  Closes bug #313847.

2005-08-21  Ryan Lortie  <desrt@desrt.ca>

	* drive-list.h: Add 'relief' member to structure.  Add prototype
	  for new 'drive_list_set_transparent' function.

	* drive-list.c (set_button_relief, drive_list_set_transparent,
	  drive_list_init): New functions to support changing the
	  GtkReliefStyle of all the buttons in the list.  Add initialiser
	  for new 'relief' member to init function.

	* drivemount.c (change_background, applet_factory): change_background
	  now takes a DriveList instance pointer and calls the
	  drive_list_set_transparent function to set button relief to NONE for
	  coloured and transparent panels but maintain the NORMAL button